--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="WEB DEVELOPMENT\Portfolio\cv.pdf">Cv</a>
+            <a class="nav-link" href="https://github.com/Boye-dev/portfolio/blob/master/cv.pdf"target="_blank">Cv</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#services">Services</a>
@@ -82,7 +82,7 @@
             I am currently studying in Babcock University Ilisian Ogun State Nigeria.I am in my third year, studying computer science.I love mathematics,playing games,coding and reading.I am a friendly person.I love working with teams of the
             same vision or goals as me.I am always eager to learn new things.
           </p>
-          <button type="button" class="button-cv btn btn-outline-info btn-lg"><a href="#">Download CV</a></button>
+          <button type="button" class="button-cv btn btn-outline-info btn-lg"><a href="https://github.com/Boye-dev/portfolio/blob/master/cv.pdf"target="_blank">Download CV</a></button>
         </div>
       </div>
     </section>
