Changes in layout

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section id="services">
       <h1 class="services-header">My Services</h1>
       <hr class="hr-services" />
-      <div class="row">
+      <div class="row rowed">
         <div class="col-lg-4 full">
           <i class="far fa-file-code fa-10x"></i><br />
           <h3 class="services-text">Fullstack Website Development</h3>
