--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col-lg-6 about-margin">
           <p class="aboutme">
             My name is <strong class="name"> Oyelola Adeboye Samuel<br /></strong><br />I am a coding enthuasist.The Coding world has really changed my perspective about different things,it has helped me identify things i did not even know I had.
-            I am currently studying in Babcock University Ilishan-Remo, Ogun State. Nigeria.I am in my third year, studying computer science.I love mathematics,playing games,coding and reading.I am a friendly person.I love working with teams of the
+            I am currently studying in Babcock University Ilisian Ogun State Nigeria.I am in my third year, studying computer science.I love mathematics,playing games,coding and reading.I am a friendly person.I love working with teams of the
             same vision or goals as me.I am always eager to learn new things.
           </p>
           <button type="button" class="button-cv btn btn-outline-info btn-lg"><a href="#">Download CV</a></button>
@@ -271,3 +271,4 @@
 </p>
 </footer>
   </div>
+</html>
